# gamsung

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/views/: api.py  main.py
react-front/: package-lock.json  package.json
react-front/src/: App.css  App.js
react-front/src/auth/: AuthRoute.js  auth.js
react-front/src/components/: LogoutButton.js
react-front/src/components/common/: Button.js  Header.js  Search.js
react-front/src/components/common/header/: Header.js  LeftMenu.js  RightMenu.js  Sign.js
react-front/src/components/mainpage/: MainPage.css  Place.css  Place.js  RandomStore.js  Search.js  Theme.css  Theme.js
react-front/src/components/mypage/: Infomation.js  Infomation_reservation.js  Infomation_user.js  TabList.css  TabList.js  infomation_user.css
react-front/src/components/storeListPage/: Map.js  Mapcomponent.js  StoreList.js
react-front/src/page/: MainPage.js
react-front/src/pages/: Home.js  Login.js  MainPage.js  MyPage.js  Register.js  StoreListPage.js
react-front/src/styles/header/: header.css
tests/: conftest.py
tests/views/: test_api.py
