[tool.poetry]
name = "gamsung"
version = "0.1.0"
description = ""
authors = ["blueknarr <blueknarr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
python-dotenv = "^0.17.1"
PyJWT = "^2.1.0"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
